Fix (CSS): made <hr> compatible with dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -290,7 +290,7 @@ body {
     clear: both;
 }
 
-#header .separator {
+hr, #header .separator {
     border-bottom: solid 1px var(--header-underline);
     height: 0;
     z-index: 6;
@@ -458,12 +458,6 @@ h5 { font-size: 1rem; }
 h6 { font-size: 1rem; font-weight: normal; font-style: italic; }
 
 img { max-width: 100%; }
-
-hr {
-    border: 0.15em solid #f5f5f5;
-    border-radius: 0.3em;
-    background: #f5f5f5;
-}
 
 abbr { text-decoration: underline dotted; }
 
